@@ -1,3 +1,10 @@
+2008-11-10 Jens Thoms Toerring    <jt@toerring.de>
+
+	* lib/textbox.c: Another bug Rob Carpenter found: when
+	trying to scroll in an empty browser the library crashed
+	with a segmentation fault due to a miscalculated number
+	of the topmost line of text.
+
 2008-11-04 Jens Thoms Toerring    <jt@toerring.de>
 
 	* lib/objects.c: Rob Carpenter pointed out another bug
